@@ -31,7 +31,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.1</version>
+				<version>3.3.0-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -44,7 +44,7 @@
 								<includes>
 									<include>com.github.Fupery:*</include>
 									<include>me.Fupery:DataTables:*</include>
-									<include>com.github.WesJD.AnvilGUI:anvilgui:*</include>
+									<include>net.wesjd:anvilgui:*</include>
 									<include>com.gitlab.blockstack:*:*</include>
 								</includes>
 								<excludes>
@@ -63,9 +63,29 @@
 				</executions>
 			</plugin>
 			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.8.1</version>
+			    <configuration>
+			    	<fork>true</fork>
+			        <compilerArgs>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+			            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+			        </compilerArgs>
+			    </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
+				<version>0.8.7</version>
 				<executions>
 					<execution>
 						<goals>
@@ -84,6 +104,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+    		<id>codemc-snapshots</id>
+    		<url>https://repo.codemc.io/repository/maven-snapshots/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.gitlab.blockstack</groupId>
@@ -114,9 +140,9 @@
             <scope>provided</scope>
         </dependency>
 		<dependency>
-			<groupId>com.github.WesJD</groupId>
-			<artifactId>AnvilGUI</artifactId>
-			<version>5d0f592c63</version>
+			<groupId>net.wesjd</groupId>
+    		<artifactId>anvilgui</artifactId>
+    		<version>1.5.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<!--Artmap Spigot/Paper version compatibility-->
@@ -220,7 +246,7 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.42.Final</version>
+			<version>4.1.66.Final</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -232,14 +258,14 @@
 		<dependency>
 			<groupId>com.mojang</groupId>
 			<artifactId>authlib</artifactId>
-			<version>1.5.21</version>
+			<version>1.5.25</version>
 			<scope>provided</scope>
 		</dependency>
 		<!--COMPATABILITY DEPENDENCIES -->
 		<dependency>
 			<groupId>com.comphenix.protocol</groupId>
 			<artifactId>ProtocolLib</artifactId>
-			<version>4.5.0</version>
+			<version>4.6.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -251,7 +277,7 @@
 		<dependency>
 			<groupId>de.robingrether.idisguise</groupId>
 			<artifactId>idisguise-core</artifactId>
-			<version>5.7.2</version>
+			<version>5.8.2</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- Tests -->
@@ -259,19 +285,19 @@
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.30.1</version>
+			<version>3.36.0.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>3.3.3</version>
+			<version>3.4.6</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -290,4 +316,10 @@
 			<url>https://nexus.troytech.info/repository/BlockStack/</url>
 		</repository>
 	</distributionManagement>
+	<pluginRepositories>
+	    <pluginRepository>
+			<id>apache.snapshots</id>
+			<url>https://repository.apache.org/snapshots/</url>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
